SynProdGITV1/force-app/main/default/objects/AccountContactRelation/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this contact is the primary contact for the related Account.</description>
    <inlineHelpText>Select this checkbox if this contact is the primary contact for the Account.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>