SynProdGITV1/force-app/main/default/objects/AccountContactRelation/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <description>Represents how well-connected and engaged this contact is with your organization.</description>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>